Make background load faster

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 	font-weight : 100;
 	font-size : 1em;
 	color: #fff;
-	background: url(../images/background.png);
+	background: url(../images/background.jpg);
 	background-position: 50% 50%;
 	background-attachment: fixed;
 	background-size: cover;
