feature: menu is always visible, including on #slide1 section

--- a/css/style.css
+++ b/css/style.css
@@ -1223,9 +1223,9 @@ padding-top:50px;
 	top: 0;
 }
 
-.navbar  { top:0 !important;
-position:fixed !important;
-}
+.navbar {
+	top: 0;
+	position: fixed;
 }
 
 /* Landscape phone to portrait tablet */
