--- a/css/style.css
+++ b/css/style.css
@@ -169,19 +169,22 @@ font-family : 'Oswald', sans;
 							Menu
 ==================================
  */
+ .navbar {
 
+ }
 
 .navbar {
-	margin-bottom: -50px;
-	width: 100%;
-	background-color: #000;
-	z-index : 100;
-	-webkit-box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 0.3);
-	-moz-box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 0.3);
-	-o-box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 0.3);
-	-ms-box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 0.3);
-	box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 0.3);
 	position: fixed;
+	top: 0;
+	z-index : 100;
+	background-color: #000;
+	width: 100%;
+	margin-bottom: -50px;
+	-webkit-box-shadow: 0px 5px 0px 0px rgba(41, 128, 185, .4);
+	-moz-box-shadow: 0px 5px 0px 0px rgba(41, 128, 185, .4);
+	-o-box-shadow: 0px 5px 0px 0px rgba(41, 128, 185, .4);
+	-ms-box-shadow: 0px 5px 0px 0px rgba(41, 128, 185, .4);
+	box-shadow: 0px 5px 0px 0px rgba(41, 128, 185, .4);
 }
 .navbar-inner {
 	background: none;
@@ -210,7 +213,7 @@ font-family : 'Oswald', sans;
 	font-weight: bold;
 	text-align: center;
 	color: #fff;
-	padding : 30px 15px 31px 15px;
+	padding : 30px 15px 29px 15px;
 	margin: 0 -1px;
 	cursor: pointer;
 	font-weight: bold;
@@ -218,11 +221,11 @@ font-family : 'Oswald', sans;
 	text-transform: uppercase;
 }
 .navigation li:hover {
-	-webkit-box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 0.3);
-	-moz-box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 0.3);
-	-o-box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 0.3);
-	-ms-box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 0.3);
-	box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 0.3);
+	-webkit-box-shadow: 0px 5px 0px 0px rgba(41, 128, 185, .3);
+	-moz-box-shadow: 0px 5px 0px 0px rgba(41, 128, 185, .3);
+	-o-box-shadow: 0px 5px 0px 0px rgba(41, 128, 185, .3);
+	-ms-box-shadow: 0px 5px 0px 0px rgba(41, 128, 185, .3);
+	box-shadow: 0px 5px 0px 0px rgba(41, 128, 185, .3);
 	background: rgb(41, 128, 185);
 }
 
@@ -1221,11 +1224,6 @@ padding-top:50px;
 }
 .theme-default a.nivo-prevNav, .theme-default a.nivo-nextNav {
 	top: 0;
-}
-
-.navbar {
-	top: 0;
-	position: fixed;
 }
 
 /* Landscape phone to portrait tablet */
