--- a/css/style.css
+++ b/css/style.css
@@ -431,12 +431,33 @@ input:-moz-placeholder {
 
 .about-description {
   float: left;
-  width: 40%;
+  width: 50%;
   margin-top: -5px;
 }
 
-.oculus-video {
+.oculus-video-wrapper {
   float: right;
+  width: 50%;
+}
+
+.oculus-video {
+  padding: 0 5%;
+}
+
+.oculus-video-iframe-wrapper {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
+}
+
+iframe, object, embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 /*
