--- a/css/style.css
+++ b/css/style.css
@@ -627,7 +627,6 @@ table:hover {
 }
 
 .team-member {
-  position: relative;
   background: #272727;
   -webkit-box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 0.3);
   -moz-box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 0.3);
@@ -640,6 +639,8 @@ table:hover {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  height: 317px;
+  overflow: hidden;
 }
 
 .team-member:hover .member_social {
@@ -660,6 +661,23 @@ table:hover {
 
 .team-member-row:first-child .team-member-first {
   margin-left: 0;
+}
+
+.team-member-info {
+  position: relative;
+}
+
+.team-member-info p {
+  position: absolute;
+  top: 0;
+  bottom: 65px;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, .7);
+  text-align: center;
+  padding : 20px;
+  margin: 0;
+  display: none;
 }
 
 .team-member-social {
@@ -700,26 +718,12 @@ table:hover {
   height: 35px;
 }
 
-.member_picture {
-  width: 100%;
-  position: relative;
-  z-index: 2;
-}
-
-h3.member_name {
+.team-member-name {
   border-bottom: 10px solid rgb(41, 128, 185);
-  position: relative;
-  z-index: 0;
 }
 
-.team-member:hover .member_social {
-  height: auto;
-  opacity: 1;
-}
-
-.team-member p {
-  padding : 20px;
-  margin: 0;
+.team-member-name:hover {
+  cursor: default;
 }
 
 /*
