--- a/css/style.css
+++ b/css/style.css
@@ -466,6 +466,16 @@ iframe, object, embed {
   background: url(../images/p1.png);
 }
 
+.quickstart h2 {
+  margin-bottom: 40px;
+}
+
+.quickstart .title p {
+  color: #3d3d3d;
+  line-height: 1.5em;
+  font-size: 1.2em;
+}
+
 .controls-wrapper {
   margin-top: 40px;
   min-height: 177px;
