--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,14 @@ i {
   margin-right: 5px;
 }
 
+.notVisible {
+  display: none;
+}
+
+.visible {
+  display: block;
+}
+
 /* all */
 ::-webkit-input-placeholder {
   font-family : 'Oswald', sans;
@@ -208,6 +216,25 @@ input:-moz-placeholder {
   border: none;
   box-shadow: none;
   padding: 0;
+  min-height: 81px;
+}
+
+.nav-condensed-menu {
+  border-radius: 3px;
+  background: #ccc;
+  display: inline-block;
+  float: right;
+  margin-top: 24px;
+  margin-right: 30px;
+}
+
+.nav-condensed-menu span {
+  display: block;
+  background: #333;
+  border-radius: 3px;
+  margin: 4px 7px;
+  height: 5px;
+  width: 30px;
 }
 
 .navbar-inner .btn-medium {
@@ -222,16 +249,6 @@ input:-moz-placeholder {
   text-align: right;
 }
 
-.navbar-brand {
-  display: inline-block;
-  float: left;
-  height:83px !important;
-}
-
-.navbar-brand img {
-  height:83px !important;
-}
-
 .navigation li {
   display: inline;
   font-weight: bold;
@@ -244,6 +261,7 @@ input:-moz-placeholder {
   font-family: 'Oswald', sans-serif;
   text-transform: uppercase;
 }
+
 .navigation li:hover {
   -webkit-box-shadow: 0px 5px 0px 0px rgba(41, 128, 185, .3);
   -moz-box-shadow: 0px 5px 0px 0px rgba(41, 128, 185, .3);
@@ -251,47 +269,6 @@ input:-moz-placeholder {
   -ms-box-shadow: 0px 5px 0px 0px rgba(41, 128, 185, .3);
   box-shadow: 0px 5px 0px 0px rgba(41, 128, 185, .3);
   background: rgb(41, 128, 185);
-}
-
-.caret {
-  border-top: 4px solid #fff;
-}
-
-.dropdown-menu {
-  border-radius: 0;
-  border: none;
-  background: rgba(1, 1, 1, 0.6);
-  margin-top: 0;
-}
-
-.dropdown-menu li ul {
-  width: 120px;
-}
-
-.dropdown-menu li {
-  padding: 20px 0 0 0;
-  text-align: center;
-  width: 120px
-}
-
-.dropdown-menu li :hover {
-  background: none;
-}
-
-.dropdown-menu li a {
-  padding: 4px 0;
-  color: #ccc;
-  font-weight: 300;
-}
-
-.dropdown-menu li a:hover {
-  background: none;
-}
-
-.dropdown-menu>.active>a, .dropdown-menu>.active>a:hover, .dropdown-menu>.active>a:focus {
-  background-color: transparent;
-  background-image: none;
-  color: #ccc;
 }
 
 /*
