--- a/css/style.css
+++ b/css/style.css
@@ -167,12 +167,14 @@ i {
   margin-right: 5px;
 }
 
+/* States */
+
 .notVisible {
   display: none;
 }
 
 .visible {
-  display: block;
+  display: block !important;
 }
 
 /* all */
@@ -248,6 +250,7 @@ input:-moz-placeholder {
   padding: 30px;
   margin: 0;
   text-align: right;
+  display: block;
 }
 
 .navigation li {
@@ -969,7 +972,6 @@ iframe, object, embed {
   .navigation {
     float: right;
     padding: 30px 0;
-    display: block;
   }
 
   .navbar-inner a:nth-of-type(2) {
