--- a/css/style.css
+++ b/css/style.css
@@ -926,7 +926,6 @@ iframe, object, embed {
 
   .team-member:nth-child(5n + 1) {
     margin-left: 2.7624309392265194%;
-    /*border: 1px solid blue;*/
   }
 
   .team-member:nth-child(4n) {
@@ -983,6 +982,10 @@ iframe, object, embed {
 
   .team-member:nth-child(4n) {
     margin-right: 2.7624309392265194%;
+  }
+
+  .team-member:nth-child(3n + 1) {
+    margin-left: 2.7624309392265194%;;
   }
 }
 
@@ -1106,7 +1109,7 @@ iframe, object, embed {
     margin-bottom: 20px;
   }
 
-  .team-member {
+  #members .team-member {
     width: 100%;
     margin-left: 0;
   }
